syntax="proto3";

package rank.service;

import "google/protobuf/empty.proto";
//import "google/api/annotations.proto";

service Rank {
    rpc updatePlayerRank(stream UpdatePlayerRankReq) returns (google.protobuf.Empty) {};
    rpc changePeriod (PeriodIdRank) returns (google.protobuf.Empty) {}; // clean all redis cache and calculate new period data
    rpc pubRank (PeriodIdRank) returns (google.protobuf.Empty) {
        /*option (google.api.http) = {
            post: "/rank-update",
            body: "*"
        };*/
    }
}

message UpdatePlayerRankResp {
    repeated UpdatePlayerRankReq playerRank = 1;
}

message UpdatePlayerRankReq {
    string user_id = 1;
    float money = 2;
}

message PeriodIdRank {
    string id = 1;
}






