syntax="proto3";

package stats.service;



service Stats {
    rpc AddStat (stream Stat) returns (StatReply) {}
    rpc StatsViaActivePeriod (PeriodIdReq) returns (StatsViaPeriodReply) {}
}


message Stat {
    string playerId = 1;
    string time = 2;
    string periodId = 3;    
    float totalMoney = 4;
}

message PeriodIdReq {
    string periodId = 1;
}

message StatsViaPeriod {
    string playerId = 1;
    float money = 2;
}

message StatsViaPeriodReply {
    repeated StatsViaPeriod stats = 1;
}

message StatReply {
    repeated Stat stats = 1;
}